--- a/docs/styles.css
+++ b/docs/styles.css
@@ -20,7 +20,7 @@ div.nav-footer-center i.fa-brands.fa-r-project {
    justify-content: center; /* Center horizontally */
   align-items: center; /* Center vertically */
 }
-.tile
+.tilef
 {
   width:100%;
   height:38vh;
@@ -293,12 +293,11 @@ box-shadow: 0px 35px 77px -17px rgba(0,0,0,0.64);
 }
 
 .image-box .img{
-  transform: scale(1.5);
-  transition: 1.2s cubic-bezier(0.17, 0.97, 0.38, 1);
+  transform: scale(1);
 }
 
 .image-box.revealed .img{
-  transform: scale(1.5);
+  transform: scale(1);
 }
 
 @media only screen and (max-width: 768px) {
