--- a/styles.css
+++ b/styles.css
@@ -189,6 +189,7 @@ box-shadow: 0px 35px 77px -17px rgba(0,0,0,0.64);
   height: 47vh;
   overflow: hidden;
   position: relative;
+  margin
 }
 
 
@@ -237,8 +238,14 @@ box-shadow: 0px 35px 77px -17px rgba(0,0,0,0.64);
   z-index: 1;
 }
 
-.content-box{
-  padding-inline: 5em;
+.content-box-left{
+  margin-left: 4em;   /* Move the content 2em to the left */
+  padding-inline: 1em;
+}
+
+.conent-box-right{
+  margin-right: 2em;   /* Move the content 2em to the right */
+  padding-inline: 10em;
 }
 
 .title{
@@ -248,9 +255,16 @@ box-shadow: 0px 35px 77px -17px rgba(0,0,0,0.64);
   margin-block-end: 0.25em;
 }
 
-.text{
+.text-right{
   text-align: left !important;
-  line-height: 1.25; 
+  margin-left: 2em;
+  line-height: 2; 
+  color: white !important;
+}
+
+.text-left{
+  text-align: left !important;
+  line-height: 2; 
   color: white !important;
 }
 
