--- a/styles.css
+++ b/styles.css
@@ -326,6 +326,14 @@ padding: 2em;
 }
 }
 
+
+@media only screen and (max-width: 400px) {
+  
+  div.aa-DetachedSearchButtonIcon{
+    display: none !important;
+  }
+}
+
 @media only screen and (max-width: 480px) {
 .title {
 font-size: 2em;
