--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,15 @@ div.nav-footer-center i.fa-brands.fa-r-project {
 }
 
 
+/* color three lines button */
+
+button.navbar-toggler .navbar-toggler-icon {
+    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='%23FF7F50' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E") !important;
+}
+
+
+
+
 /* first two sections */
 
 
