--- a/docs/styles.css
+++ b/docs/styles.css
@@ -252,7 +252,7 @@ box-shadow: 0px 35px 77px -17px rgba(0,0,0,0.64);
   padding-inline: 1em;
 }
 
-.conent-box-right{
+.content-box-right{
   margin-right: 2em;   /* Move the content 2em to the right */
   padding-inline: 10em;
 }
@@ -264,9 +264,17 @@ box-shadow: 0px 35px 77px -17px rgba(0,0,0,0.64);
   margin-block-end: 0.25em;
 }
 
+@media only screen and (max-width: 1500px) {
+.title{
+  margin-left: .5em;
+
+}
+}
+
 .text-right{
   text-align: left !important;
   margin-left: 2em;
+  margin-right: 2em;
   line-height: 2; 
   color: white !important;
 }
@@ -274,6 +282,8 @@ box-shadow: 0px 35px 77px -17px rgba(0,0,0,0.64);
 .text-left{
   text-align: left !important;
   line-height: 2; 
+  margin-left: 2em;
+  margin-right: 2em;
   color: white !important;
 }
 
