--- a/styles.css
+++ b/styles.css
@@ -3292,25 +3292,6 @@ width:20vw;
   
 }
 
-.books {
-background: repeating-radial-gradient(circle at bottom left, #fedc00 0%, #fedc00 5.56%, #fcb712 0%, #fcb712 11.11%, #f7921e 0%, #f7921e 16.67%, #e87f24 0%, #e87f24 22.22%, #dd6227 0%, #dd6227 27.78%, #dc4c27 0%, #dc4c27 33.33%, #ca3435 0%, #ca3435 38.89%, #b82841 0%, #b82841 44.44%, #953751 0%, #953751 50%, #364c88 0%, #364c88 55.56%, #16599d 0%, #16599d 61.11%, #02609e 0%, #02609e 66.67%, #0073a9 0%, #0073a9 72.22%, #008aa4 0%, #008aa4 77.78%, #239a87 0%, #239a87 83.33%, #7cba6d 0%, #7cba6d 88.89%, #becc2f 0%, #becc2f 94.44%, #e0d81d 0%, #e0d81d 100%), repeating-radial-gradient(circle at bottom right, #fedc00 0%, #fedc00 5.56%, #fcb712 0%, #fcb712 11.11%, #f7921e 0%, #f7921e 16.67%, #e87f24 0%, #e87f24 22.22%, #dd6227 0%, #dd6227 27.78%, #dc4c27 0%, #dc4c27 33.33%, #ca3435 0%, #ca3435 38.89%, #b82841 0%, #b82841 44.44%, #953751 0%, #953751 50%, #364c88 0%, #364c88 55.56%, #16599d 0%, #16599d 61.11%, #02609e 0%, #02609e 66.67%, #0073a9 0%, #0073a9 72.22%, #008aa4 0%, #008aa4 77.78%, #239a87 0%, #239a87 83.33%, #7cba6d 0%, #7cba6d 88.89%, #becc2f 0%, #becc2f 94.44%, #e0d81d 0%, #e0d81d 100%);
-    background-blend-mode: overlay;
-padding-top: 10px; 
-border-radius: 20px;
-}
-
-.book_aut{
-  font-size: 2em;
-display: flex;
-justify-content: center;
-align-items: center;
-flex-direction: column;
-font-weight: 700;
-background-image: conic-gradient(#553c9a, #ee4b2b, #00c2cb, #553c9a);
-color: transparent;
-background-clip: text;
--webkit-background-clip: text;
-}
 
 .table{
   --bs-table-accent-bg: transparent;
@@ -4057,26 +4038,10 @@ font-weight: 700;
 
 }
 
-.back_resource {
-background: repeating-radial-gradient(circle at bottom left, #fedc00 0%, #fedc00 5.56%, #fcb712 0%, #fcb712 11.11%, #f7921e 0%, #f7921e 16.67%, #e87f24 0%, #e87f24 22.22%, #dd6227 0%, #dd6227 27.78%, #dc4c27 0%, #dc4c27 33.33%, #ca3435 0%, #ca3435 38.89%, #b82841 0%, #b82841 44.44%, #953751 0%, #953751 50%, #364c88 0%, #364c88 55.56%, #16599d 0%, #16599d 61.11%, #02609e 0%, #02609e 66.67%, #0073a9 0%, #0073a9 72.22%, #008aa4 0%, #008aa4 77.78%, #239a87 0%, #239a87 83.33%, #7cba6d 0%, #7cba6d 88.89%, #becc2f 0%, #becc2f 94.44%, #e0d81d 0%, #e0d81d 100%), repeating-radial-gradient(circle at bottom right, #fedc00 0%, #fedc00 5.56%, #fcb712 0%, #fcb712 11.11%, #f7921e 0%, #f7921e 16.67%, #e87f24 0%, #e87f24 22.22%, #dd6227 0%, #dd6227 27.78%, #dc4c27 0%, #dc4c27 33.33%, #ca3435 0%, #ca3435 38.89%, #b82841 0%, #b82841 44.44%, #953751 0%, #953751 50%, #364c88 0%, #364c88 55.56%, #16599d 0%, #16599d 61.11%, #02609e 0%, #02609e 66.67%, #0073a9 0%, #0073a9 72.22%, #008aa4 0%, #008aa4 77.78%, #239a87 0%, #239a87 83.33%, #7cba6d 0%, #7cba6d 88.89%, #becc2f 0%, #becc2f 94.44%, #e0d81d 0%, #e0d81d 100%);
-    background-blend-mode: overlay;
-}
 
 
 
 
-
-
-
-.btn-webr{
- background: repeating-radial-gradient(circle at bottom left, #fedc00 0%, #fedc00 5.56%, #fcb712 0%, #fcb712 11.11%, #f7921e 0%, #f7921e 16.67%, #e87f24 0%, #e87f24 22.22%, #dd6227 0%, #dd6227 27.78%, #dc4c27 0%, #dc4c27 33.33%, #ca3435 0%, #ca3435 38.89%, #b82841 0%, #b82841 44.44%, #953751 0%, #953751 50%, #364c88 0%, #364c88 55.56%, #16599d 0%, #16599d 61.11%, #02609e 0%, #02609e 66.67%, #0073a9 0%, #0073a9 72.22%, #008aa4 0%, #008aa4 77.78%, #239a87 0%, #239a87 83.33%, #7cba6d 0%, #7cba6d 88.89%, #becc2f 0%, #becc2f 94.44%, #e0d81d 0%, #e0d81d 100%), repeating-radial-gradient(circle at bottom right, #fedc00 0%, #fedc00 5.56%, #fcb712 0%, #fcb712 11.11%, #f7921e 0%, #f7921e 16.67%, #e87f24 0%, #e87f24 22.22%, #dd6227 0%, #dd6227 27.78%, #dc4c27 0%, #dc4c27 33.33%, #ca3435 0%, #ca3435 38.89%, #b82841 0%, #b82841 44.44%, #953751 0%, #953751 50%, #364c88 0%, #364c88 55.56%, #16599d 0%, #16599d 61.11%, #02609e 0%, #02609e 66.67%, #0073a9 0%, #0073a9 72.22%, #008aa4 0%, #008aa4 77.78%, #239a87 0%, #239a87 83.33%, #7cba6d 0%, #7cba6d 88.89%, #becc2f 0%, #becc2f 94.44%, #e0d81d 0%, #e0d81d 100%);
-    background-blend-mode: overlay;
-    color: white!important;
-    border-color: transparent;
-    margin-right: -200px;
-    font-weight: 900;
-    border-radius: 10px;
-}
 
 
 
@@ -4116,7 +4081,7 @@ html body.nav-fixed.quarto-light header#title-block-header.quarto-title-block.de
   }
   
  h2.anchored{
-    border-bottom: 5px solid #8C1516; /* Adjust as needed */
+    border-bottom: 5px solid #FF7F50; /* Adjust as needed */
     }
     
 .button_fer, .button_fer_software{
